2016-08-28  Sam Steingold  <sds@gnu.org>

	* utils/modprep.lisp (output-all): bind all global variables in
	appropriate functions to allow loading into the same lisp session
	(output-all): make sure that the file name is printed on #line 1
	without #P
	(custom:*suppress-similar-constant-redefinition-warning*)
	[:compile-toplevel]: set to T to avoid the warnings on reload

2016-08-28  Sam Steingold  <sds@gnu.org>

	* genclisph.d (emit_export_declaration, struct typecode_entry):
	use `const' to avoid the warning:
	deprecated conversion from string constant to ‘char*’ [-Wwrite-strings]

2016-08-28  Sam Steingold  <sds@gnu.org>

	avoid the clang -Wgnu-designator warning
	* lispbibl.d (as_object, as_chart): use the new {.one_o=???}
	syntax instead of GNU old-style field designator extension {one_o:???}
	https://gcc.gnu.org/onlinedocs/gcc-6.2.0/gcc/Designated-Inits.html

2016-08-26  Sam Steingold  <sds@gnu.org>

	* makemake.in (XCFLAGS) [XCC_GCC]: treat gcc 5 & 6 like 3 & 4
	Fixes bug#686

2016-08-14  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/calls.c (hardlink_file_o): add
	(copy_one_file): fix GC-safety bugs

2016-08-12  Sam Steingold  <sds@gnu.org>

	* modules/pcre/cpcre.c (PCRE:PCRE-EXEC): fix a GC-safety bug

2016-08-12  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/calls.c (copy_one_file): fix STACK depth handling

2016-08-11  Sam Steingold  <sds@gnu.org>

	* pathname.d (delete_directory): fix rmdir() failure handling

2016-08-11  Sam Steingold  <sds@gnu.org>

	* package.d (intern): cerror_package_locked can trigger GC

2016-08-11  Sam Steingold  <sds@gnu.org>

	* makemake.in (make_modules): create separate targets for base and
	full modules because the former are compiled using the boot
	linking set, while the latter (e.g., asdf) require the base linking set

2016-08-11  Sam Steingold  <sds@gnu.org>

	* modules/bindings/glibc/linux.lisp: avoid
	error: "Never use <bits/ipctypes.h> directly; include <sys/ipc.h> instead."